--- a/xcxtweb/.settings/org.eclipse.core.resources.prefs
+++ b/xcxtweb/.settings/org.eclipse.core.resources.prefs
@@ -3,5 +3,8 @@ encoding//src/main/java=UTF-8
 encoding//src/main/resources=UTF-8
 encoding//src/main/resources/local.properties=UTF-8
 encoding//src/main/resources/log4j.properties=UTF-8
+encoding//src/main/webapp/WEB-INF/jsp/phone/category-select.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/jsp/phone/order-detail.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/jsp/phone/order-list.jsp=UTF-8
 encoding//src/main/webapp/lib/ueditor/jsp/config.json=UTF-8
 encoding/<project>=UTF-8
